<resources>
    <string name="app_name">Speech Master</string>
    <string name="app_name_version">Speech Master Lite 1.0</string>
    <string name="copyright">©2015 Jason Shepherd \n</string>
    <string name="app_info">\n Designed for learners of English as a second language. Used to improve English pronunciation skills. Practice your pronunciation!</string>
    <string name="app_url">rickgoldman.com/speechmaster</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="action_beginner">Beginner</string>
    <string name="action_intermediate">Intermediate</string>
    <string name="action_advanced">Advanced</string>
    <string name="banner_ad_unit_id">ca-app-pub-2390888048112065/6686826437</string>
    <string name="hello_world">Master English Pronunciation</string>
    <string name="speech_prompt">Say something.</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input.</string>
    <string name="more">Next</string>
    <string name="listen">Listen</string>
    <string name="next_please">Next please. \n /nɛkst pliz/</string>
    <string name="say_this">Press speak then say:</string>
    <string name="sounds_like">Sounds like you said:</string>
    <string name="b1">Hello. \n /həlo/</string>
    <string name="b2">My name is \n /maj nem ɪz/</string>
    <string name="b3">How are you? \n /haw ɑr ju/</string>
    <string name="b4">Do you speak English? \n /du ju spik ɪŋglɪʃ/</string>
    <string name="b5">I don\'t speak English. \n /aj dont spik ɪŋglɪʃ/</string>
    <string name="b6">Thank you. \n /θæŋk ju/</string>
    <string name="b7">You\'re welcome. \n /jʊr wɛlkəm/</string>
    <string name="b8">I come from \n /aj kəm frəm/</string>
    <string name="b9">yes \n /jɛs/</string>
    <string name="b10">no \n /no/</string>
    <string name="b11">maybe \n /mebi/</string>
    <string name="b12">perhaps \n /pərhæps/</string>
    <string name="b13">Thanks. \n /θæŋks/</string>
    <string name="b14">Thank you very much. \n /θæŋk ju vɛri mətʃ/</string>
    <string name="b15">Please speak slowly. \n /pliz spik sloli/</string>
    <string name="b16">I don\'t speak much English. \n /aj dont spik mətʃ ɪŋglɪʃ/</string>
    <string name="b17">I don\'t understand much English.\n /aj dont əndərstænd mətʃ ɪŋglɪʃ/</string>
    <string name="b18">I understand. \n /aj əndərstænd/</string>
    <string name="b19">I don\'t understand. \n /aj dont əndərstænd/</string>
    <string name="b20">Where is the bathroom? \n /wɛr ɪz ðə bæθrum/</string>
    <string name="b21">Where is the toilet? \n /wɛr ɪz ðə tɔjlət/</string>
    <string name="b22">I speak a little English. \n /aj spik ə lɪtəl ɪŋglɪʃ/</string>
    <string name="b23">Don\'t mention it. \n /dont mɛnʃən ɪt/</string>
    <string name="b24">Hi. \n /haj/</string>
    <string name="b25">Good morning. \n /gʊd mɔrnɪŋ/</string>
    <string name="b26">Good evening. \n /gʊd ivnɪŋ/</string>
    <string name="b27">Good afternoon. \n /gʊd æftərnun/</string>
    <string name="b28">Excuse me. \n /ɪkskjus mi/</string>
    <string name="b29">Bye. \n baj//</string>
    <string name="b30">Good bye. \n /gʊd baj/</string>
    <string name="b31">Good night. \n /gʊd najt/</string>
    <string name="b32">See you. \n /si ju/</string>
    <string name="b33">See you later. \n /si ju letər/</string>
    <string name="b34">See you soon. \n /si ju sun/</string>
    <string name="b35">What time is it? \n /wət tajm ɪz ɪt/</string>
    <string name="b36">Sorry. \n /sɑri/</string>
    <string name="b37">No problem. \n /no prɑbləm/</string>
    <string name="b38">It\'s okay. \n /ɪts oke/</string>
    <string name="b39">That\'s okay. \n /thats oke/</string>
    <string name="b40">One. \n /wən/</string>
    <string name="b41">Two. \n /tu/</string>
    <string name="b42">Three. \n /θri/</string>
    <string name="b43">Four. \n /fɔr/</string>
    <string name="b44">Five. \n /fajv/</string>
    <string name="b45">Six. \n /sɪks/</string>
    <string name="b46">Seven. \n /sɛvən/</string>
    <string name="b47">Eight. \n /et/</string>
    <string name="b48">Nine. \n /najn/</string>
    <string name="b49">Ten. \n /tɛn/</string>
    <string name="b50">Have a nice day. \n /hæv ə najs de/</string>
    <string name="i1">What\'s the weather like? \n /wəts ðə wɛðər lajk/</string>
    <string name="i2">It\'s raining at the moment. \n /ɪts renɪŋ æt ðə momənt/</string>
    <string name="i3">Would you like some coffee or tea? \n /wʊd ju lajk səm kɑfi ɔr ti/</string>
    <string name="i4">Yes, thank you. I\'d like some coffee. \n /jɛs θæŋk ju ajd lajk səm kɑfi/</string>
    <string name="i5">What are you going to do tomorrow? \n /wət ɑr ju goɪŋ tu du təmɑro/</string>
    <string name="i6">I\'m going to visit some friends next weekend. \n /ajm goɪŋ tu vɪzət səm frɛndz nɛkst wikɛnd/</string>
    <string name="i7">What shall we do this evening? \n /wət ʃæl wi du ðɪs ivnɪŋ/.</string>
    <string name="i8">Let\'s go see a film. \n /lɛts go si ə fɪlm/</string>
    <string name="i9">Why don\'t we go out to the cinema tonight? \n /waj dont wi go awt tu ðə sɪnəmə tənajt?/</string>
    <string name="i10">Why don\'t we go out for a cup of coffee? \n /waj dont wi go awt fɔr ə kəp əv kɑfi/</string>
    <string name="i11">Have you got any children? \n /hæv ju gɑt ɛni tʃɪldrən/</string>
    <string name="i12">Yes, I\'ve got three children. Two boys and a daughter. \n /jɛs ajv gɑt θri tʃɪldrən tu bɔjz ænd ə dɒtər/</string>
    <string name="i13">Can you speak another language? \n /kæn ju spik ənəðər læŋgwədʒ/</string>
    <string name="i14">No, sorry. I only speak English. \n /no sɑri aj onli spik ɪŋglɪʃ/</string>
    <string name="i15">Pardon me, how old are you? \n /pɑrdən mi haw old ɑr ju/</string>
    <string name="i16">Twenty eight. I\'m twenty eight years old. \n /twɛnti- et ajm twɛnti- et jɪrz old/</string>
    <string name="i17">What do you do for a living? \n /wət du ju du fɔr ə lɪvɪŋ/</string>
    <string name="i18">I\'m studying to be a doctor. \n /ajm stədiɪŋ tu bi ə dɑktər/</string>
    <string name="i19">Do you mind if I ask a personal question? \n /du ju majnd ɪf aj æsk ə pərsənəl kwɛstʃən/</string>
    <string name="i20">No, I don\'t mind. Please ask. \n /no aj dont majnd pliz æsk/</string>
    <string name="i21">Where were you born? \n /wɛr wər ju bɔrn/</string>
    <string name="i22">I was born in Cornwall, England. \n /aj wəz bɔrn ɪn kɔrnwɒl ɪŋglənd/</string>
    <string name="i23">Are you married? \n /ɑr ju mɛrid/</string>
    <string name="i24">Yes. I\'m happily married. \n /jɛs ajm hæpəli mɛrid/</string>
    <string name="i25">Can you tell me how to get to the bank? \n /kæn ju tɛl mi haw tu gɛt tu ðə bæŋk/</string>
    <string name="i26">Keep going along this street. \n /kip goɪŋ əlɒŋ ðɪs strit/</string>
    <string name="i27">Where is the nearest Italian restaurant? \n /wɛr ɪz ðə nɪrəst ətæljən rɛstərɑnt/</string>
    <string name="i28">You can find any restaurant at the mall. \n /ju kæn fajnd ɛni rɛstərɑnt æt ðə mɒl/</string>
    <string name="i29">What\'s your home address? \n /wəts jɔr hom ædrɛs/</string>
    <string name="i30">I live at 321 Norman Rockwell Avenue. \n /aj lajv æt θri tu wən nɔrmən rɑkwɛl ævənu/</string>
    <string name="i31">I live in San Diego. \n /aj lajv ɪn sæn diego/</string>
    <string name="i32">What is your phone number? \n /wət ɪz jɔr fon nəmbər/</string>
    <string name="i33">My phone number is 212-576-9887. \n /maj fon nəmbər ɪz tu wən tu fajv sɛvən sɪks najn et et sɛvən/</string>
    <string name="i34">I\'m looking for a sweater. \n //</string>
    <string name="i35">Where can I buy some clothes around here? \n /wɛr kæn aj baj səm kloðz ərawnd hɪr?/</string>
    <string name="i36">I\'d like to find a new pair of jeans. \n /ajd lajk tu fajnd ə nu pɛr əv dʒinz/</string>
    <string name="i37">Where is the nearest supermarket? \n /wɛr ɪz ðə nɪrəst supərmɑrkɪt?/</string>
    <string name="i38">Do you have anything larger? \n /du ju hæv ɛniθɪŋ lɑrdʒər/</string>
    <string name="i39">Is there something in a smaller size? \n /ɪz ðɛr ɛniθɪŋ ɪn ə smɒlər sajz/</string>
    <string name="i40">I\'d like to pay by credit card. \n /ajd lajk tu pe baj krɛdət kɑrd/</string>
    <string name="i41">Do you take cash, check or card? \n /du ju tek kæʃ tʃɛk ɔr kɑrd/</string>
    <string name="i42">Your total is $31.00. \n /du ju tek kæʃ tʃɛk ɔr kɑrd/</string>
    <string name="i43">That will be $12.16 please. \n /ðæt wɪl bi twɛlv sɪkstin pliz/</string>
    <string name="i44">We are about 135 miles west of Las Vegas. \n /wi ɑr əbawt wən həndrəd ænd θərdi fajv majlz wɛst əv lɑs vegəs/</string>
    <string name="i45">The population here is just over 3.5 million. \n /ðə pɑpjəleʃən hɪr ɪz dʒəst ovər θri pɔjnt fajv mɪljən/</string>
    <string name="i46">This car gets about 25 miles per gallon. \n /ðɪs kɑr gɛts əbawt twɛnti fajv majlz pər gælən/</string>
    <string name="i47">3.99 per pound? That seems expensive. \n /θri najnti najn pər pawnd ðæt simz ɪkspɛnsɪv/</string>
    <string name="i48">We live at 3648 North St. \n /wi lajv æt θri sɪks fɔr et nɔrθ strit/</string>
    <string name="i49">That\'s a $380 dollar fine. \n /ðæts ə θri həndrəd ænd eti dɑlər fajn/</string>
    <string name="i50">That sounds too good to be true. \n /ðæt sawndz tu gʊd tu bi tru/</string>
    <string name="a1">Could you please provide more details? \n /kʊd ju pliz prəvajd mɔr dətelz/</string>
    <string name="a2">Allow me to illustrate my point. \n /əlaw mi tu ɪləstret maj pɔjnt/</string>
    <string name="a3">Could you possibly provide an example? \n /kʊd ju pɑsəbli prəvajd æn ɪgzæmpəl/</string>
    <string name="a4">There are several examples we can offer. \n /ðɛr ɑr sɛvrəl ɪgzæmpəlz wi kæn ɒfər/</string>
    <string name="a5">Allow us to explain in further detail. \n /əlaw əs tu ɪksplen ɪn fərðər dətel/</string>
    <string name="a6">Please allow me to give you an example. \n /pliz əlaw mi tu gɪv ju æn ɪgzæmpəl/</string>
    <string name="a7">Could you elaborate on that issue? \n kʊd ju əlæbrət ɑn ðæt ɪʃu//</string>
    <string name="a8">For example, I\'d really prefer clearer instructions. \n /fɔr ɪgzæmpəl, ajd rɪli prəfər klɪrər ɪnstrəkʃənz/</string>
    <string name="a9">To give you an example, we always wash first. \n /tu gɪv ju æn ɪgzæmpəl, wi ɒlwez wɑʃ fərst/</string>
    <string name="a10">Would you like to examine the documents? \n /wʊd ju lajk tu ɪgzæmən ðə dɑkjəmənts/</string>
    <string name="a11">Mr. Thompson will accompany you to the airport. \n /mɪstər. tɑmpsən wɪl əkəmpəni ju tu ðə ɛrpɔrt/</string>
    <string name="a12">Do you have any suggestions for tonight? \n /du ju hæv ɛni səgdʒɛstʃənz fɔr tənajt/</string>
    <string name="a13">Our primary concern is that we will miss the flight. \n /awər prajmɛri kənsərn ɪz ðæt wi wɪl mɪs ðə flajt/</string>
    <string name="a14">What we really need to take care of is the time. \n /wət wi rɪli nid tu tek kɛr əv ɪz ðə tajm/</string>
    <string name="a15">It all comes down to this. \n ɪt ɒl kəmz dawn tu ðɪs//</string>
    <string name="a16">I don\'t mean to be rude, but what are you thinking? \n /aj dont min tu bi rud, bət wət ɑr ju θɪŋkəŋ/</string>
    <string name="a17">You have a valid point. I could be wrong. \n /ju hæv ə væləd pɔjnt. aj kʊd bi rɒŋ/</string>
    <string name="a18">Correct me if I\'m wrong, please. \n /kərɛkt mi ɪf ajm rɒŋ, pliz/</string>
    <string name="a19">This may sound strange, but it\'s the truth. \n /ðɪs me sawnd strendʒ, bət ɪts ðə truθ/</string>
    <string name="a20">May I interrupt for a moment? \n /me aj ɪntərəpt fɔr ə momənt/</string>
    <string name="a21">Certainly. What do you have in mind? \n /sərtənli. wət du ju hæv ɪn majnd/</string>
    <string name="a22">Do you know what I\'m saying? \n /du ju no wət ajm seɪŋ/</string>
    <string name="a23">Your point is understood. \n /jɔr pɔjnt ɪz əndərstʊd/</string>
</resources>