<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:title="@string/action_beginner"
        android:id="@+id/action_beginner"
        android:icon="@drawable/button_blue"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:title="@string/action_intermediate"
        android:id="@+id/action_intermediate"
        android:icon="@drawable/button_green"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:title="@string/action_advanced"
        android:id="@+id/action_advanced"
        android:icon="@drawable/button_red"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="always" />



</menu>
